# BurnQED

./: .gitignore  .gitmodules  3thm_diversity_test.json  3thm_diversity_test_goedel.json  3thm_diversity_test_iter0.json  3thm_diversity_test_iter0_mid.json  CLAUDE.md  Cargo.toml  README.md  eval_clean_100.json
archive/v1/scripts/: generate_ebm_training_data.sh
benchmarks/: amc12a_2015_p10.json  goedel_depth3.json  goedel_depth3_unproved.json  goedel_depth4plus.json  goedel_depth4plus_unproved.json  goedel_search_10k.json  iter0_search_theorems.json  minif2f_test.json  minif2f_v2c_test.json  minif2f_v2c_valid.json  minif2f_v2s_test.json  minif2f_v2s_test_8.json  minif2f_v2s_test_failed.json  minif2f_v2s_valid.json  minif2f_valid.json  putnam.json  putnam_ds_proved_10.json  putnam_skip.txt  unproved_4.json
configs/: .search_minif2f_bex1.toml.swp  goedel_iter0_geq4.toml  models.toml  search.toml  search_goedel_pass4.toml  search_local.toml  search_minif2f.toml  search_minif2f_bex1.toml  search_minif2f_goedel.toml  search_minif2f_pass128.toml  search_minif2f_pass128_goedel.toml  search_minif2f_pass32.toml  search_minif2f_pass32_goedel.toml  search_minif2f_probes.toml  search_minif2f_probes_goedel.toml  search_putnam.toml  search_putnam_goedel.toml
crates/burn-contrib/: Cargo.toml
crates/burn-contrib/src/: info_nce_loss.rs  lib.rs  parquet_dataset.rs  pooling.rs  spectral_norm.rs  warmup_scheduler.rs
crates/ebm/: Cargo.toml
crates/ebm/examples/: diagnose_embeddings.rs
crates/ebm/src/: inference.rs  lib.rs
crates/ebm/src/model/: bridge.rs  encoder.rs  energy_head.rs  mod.rs  spectral_norm.rs
crates/ebm/src/training/: cache.rs  data.rs  loss.rs  metrics.rs  mod.rs  trainer.rs
crates/ebm/tests/: integration.rs
crates/lean-repl/: Cargo.toml  build.rs
crates/lean-repl/src/: lib.rs  pool.rs  protocol.rs  session.rs  types.rs  worker.rs
crates/lean-repl/tests/: integration.rs
crates/policy/: Cargo.toml
crates/policy/src/: .prompt.rs.swp  handle.rs  lib.rs  llama.rs  model.rs  prompt.rs  service.rs  sglang.rs  tokenizer.rs  types.rs
crates/policy/tests/: integration.rs
crates/prover-core/: Cargo.toml  build.rs
crates/prover-core/examples/: gen_synthetic_parquet.rs
crates/prover-core/src/: config.rs  main.rs  pipeline.rs  results.rs
crates/prover-core/tests/: integration.rs  integration_llm.rs
crates/search/: Cargo.toml
crates/search/src/: adapters.rs  batcher.rs  cache.rs  config.rs  encode_batcher.rs  engine.rs  lib.rs  mocks.rs  node.rs  tactic_rewrite.rs  trie.rs
crates/search/tests/: integration.rs
crates/trajectory/: Cargo.toml
crates/trajectory/src/: lib.rs  reader.rs  types.rs  writer.rs
crates/trajectory/tests/: integration.rs
data/: ebm_trivial_theorems.json  imo_steps_lemmas.json  imo_steps_lemmas_skip.txt  imo_steps_theorems.json  minif2f_test.json  minif2f_v2c_test.json  minif2f_v2c_valid.json  minif2f_v2s_test.json  minif2f_v2s_valid.json  minif2f_valid.json  separation_probe.json  smoke_theorems.json  test_quick.json  test_theorems.json  train_eval_theorems.json
docs/: burn-qed_plan.md  cloud_deployment.md  data_format_spec.md  datasets.md  deepseek_sft.md  ebm_learning_guide.md  ebm_overhaul.md  ebm_perf.md  experiment_guide.md  goedel_dataset_analysis.md  goedel_migration.md  iter5.md  iter_4.md  iters_0-1.md  lean_github_dataset_analysis.md  minif2f.md  minif2f_v2s_baseline.md  pass@4_goedel_depth_geq4.md  pending.md  perf.md  phase1_instructions.md  phase3_exacution_plan.md  phase3_instructions.md  phase4_execution_plan.md  phase4_instructions.md  phase5_execution_plan.md  phase5_instructions.md  putnam_analysis.md  sglang.md  v2_execution_plan.md  week2_summary.md
docs/archive/: phase2_instructions.md
docs/v1/: burn-qed_plan.md  datasets.md  ebm_training_data.md  encoding_bug.md  experiment_guide.md  iter5.md  iters_0-1.md
python/: encode_embeddings.py  encode_server.py  inference_server.py  requirements.txt  run_separation_probe.py  verify_sglang_hidden_states.py
python/data/: convert_imo_steps.py  create_separation_probe.py  download_minif2f.py  generate_benchmark_lean.py  generate_lean.py  merge_sft_dataset.py  prepare_search_theorems.py  prepare_tactic_pairs.py  process_lean_github.py  trace_mathlib.py
python/data/goedel_migration/: compile.py  extract_pairs_pantograph.py  fix_renames.py  fix_rewrites.py  integrity_sweep.py  merge_proofs.py  trace_goedel.py
python/data/goedel_migration/patches/: ExtractData_lean427.lean
python/data/minif2f/: compile.py  download.py  generate_lean.py
python/data/putnam/: download.py
python/joint/: __init__.py  dataset.py  ebm_head.py  losses.py  model.py  monitoring.py  train.py
python/training/: export_llm.py  train_llm.py
scripts/: _lib.sh  analyze_putnam.py  analyze_version_mismatch.py  archive_v1.sh  bench_sglang.py  bench_tactic_workers.sh  build_eval_clean_100.py  check_proofs.py  compare_embeddings.py  generate_ebm_training_data.sh  great_reset.sh  harvest_siblings.sh  lean_start.sh  migrate_layout.sh  migrate_to_runpod.sh  prepare_data.sh  prepare_putnam.sh  reencode_loop.sh  reencode_via_server.py  remove_broken_theorems.py  resume_search.sh  review-code.sh  review-plan.sh  review-security.sh  run_all_iterations.sh  run_baseline.sh  run_ebm_train.sh  run_finetune.sh  run_goedel_pass4.sh  run_iteration.sh  run_iteration_search.sh  run_iteration_train.sh  run_minif2f_chain.sh  run_minif2f_eval.sh  run_putnam_eval.sh  setup_cloud.sh  setup_lambda.sh  setup_pantograph.sh  setup_runpod.sh  smoke_test.sh  (+10 more)
