[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling & logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LLM inference (candle)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# EBM training + inference (burn)
burn = { version = "0.16", features = ["train", "autodiff", "metrics", "dataset"] }

# Tokenization
tokenizers = "0.21"

# Data I/O
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["async"] }

# Utilities
rand = "0.8"
clap = { version = "4", features = ["derive"] }
ordered-float = "4"
async-trait = "0.1"
indicatif = "0.17"
