[workspace]
members = ["crates/*"]
default-members = ["crates/prover-core", "crates/search", "crates/policy", "crates/lean-repl", "crates/trajectory"]
resolver = "2"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling & logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# EBM training + inference (burn)
burn = { version = "0.16", features = ["train", "autodiff", "metrics", "dataset", "ndarray"] }

# Data I/O
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["async"] }

# Utilities
rand = "0.8"
clap = { version = "4", features = ["derive"] }
ordered-float = "4"
async-trait = "0.1"
futures = "0.3"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2"
lru = "0.12"
