[package]
name = "ebm"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { workspace = true }
burn-contrib = { path = "../burn-contrib" }
trajectory = { path = "../trajectory" }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
