[package]
name = "ebm"
version = "0.2.0"
edition = "2021"

[dependencies]
burn = { workspace = true }
burn-contrib = { path = "../burn-contrib" }
trajectory = { path = "../trajectory" }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
