[package]
name = "policy"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["candle-core/cuda"]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
