[package]
name = "policy"
version = "0.5.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
reqwest = { workspace = true }
url = { workspace = true }
