[package]
name = "prover-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lean-repl = { path = "../lean-repl" }
policy = { path = "../policy" }
ebm = { path = "../ebm" }
search = { path = "../search" }
trajectory = { path = "../trajectory" }
clap = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = "3"
