[package]
name = "prover-core"
version = "0.2.0"
edition = "2021"

[features]
default = []
cuda = ["policy/cuda"]

[dependencies]
lean-repl = { path = "../lean-repl" }
policy = { path = "../policy" }
ebm = { path = "../ebm" }
search = { path = "../search" }
trajectory = { path = "../trajectory" }
burn = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde = { workspace = true }
