[package]
name = "search"
version = "0.3.0"
edition = "2021"

[dependencies]
lean-repl = { path = "../lean-repl" }
policy = { path = "../policy" }
ebm = { path = "../ebm" }
trajectory = { path = "../trajectory" }
ordered-float = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
