[package]
name = "search"
version = "0.4.0"
edition = "2021"

[dependencies]
lean-repl = { path = "../lean-repl" }
policy = { path = "../policy" }
ebm = { path = "../ebm", optional = true }
trajectory = { path = "../trajectory" }
ordered-float = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }
futures = { workspace = true }

[features]
default = []
burn-ebm = ["dep:ebm"]

[dev-dependencies]
toml = { workspace = true }
